# playground

./: .clangd  .gitignore  Makefile  README.md  main.c  meson.build
client/: client  main.cpp
common/: io.cpp  io.h  log.cpp  log.h  objects.cpp  objects.h
proto/: models.pb.cc  models.pb.h  models.proto
server/: main.cpp  server
src/: main.c
test/: test
